<resources>
    <string name="app_name">Det.App</string>
    <string name="bilan_size">100px</string>
    <string name="login">Already registered? <u>Login Here</u> </string>
    <string name="register">No Account? <u>Register Here</u> </string>
    <string name="nomatch">Passwords don\'t match!!</string>
    <string name="error">File couldn\'t be deleted!</string>
    <string name="permission_denied">We are not allowed to launch the camera!</string>
    <string name="start_camera">Capture Image</string>
    <string name="imageview">Image</string>
    <string name="resetPass"><u>Forgot Password ?</u> </string>
    <string name="rememberPass">Remember Password </string>
    <string name="logIn">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="select_option">Select Option :</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="option1">General Detection</string>
    <string name="option2">Object Detection</string>
    <string name="option3">Face Mood Detection</string>
    <string name="title1">Detection Mode</string>
    <string name="take_photo">Take Photo</string>
</resources>
