<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoicesActivity"
    android:background="@drawable/login_bk">


    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/caveat_bold"
        android:text="@string/title1"
        android:textColor="@color/blue_whoami"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <Button
        android:id="@+id/option1"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_weight="1"
        android:text="@string/option1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <Button
        android:id="@+id/option2"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/option2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option1" />

    <Button
        android:id="@+id/option3"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/option3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option2" />
</androidx.constraintlayout.widget.ConstraintLayout>